--- a/sass/_map.scss
+++ b/sass/_map.scss
@@ -10,7 +10,6 @@
     top: 0;
     width: 100%;
     height: 100%;
-    //height: auto;
     opacity: 0.1;
   }
   &__inside{
@@ -26,9 +25,17 @@
       font-weight: bold;
       color: $color-red;
     }
+    &--text{
+      color: $color-red;
+      animation-name: example;
+      animation-duration: 4s;
+    }
     &--rectangle{
       width: 5%;
       padding-bottom: 3%;
     }
+  }
+  a:hover{
+    text-decoration: none;
   }
 }
