--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@
 .meet div .col-xs-12 .meet__team--background {
   opacity: 0;
   position: absolute;
-  background: linear-gradient(#f38181, #fce38a);
+  background: linear-gradient(rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
   width: 360px;
   z-index: 400;
   height: 450px;
@@ -174,7 +174,7 @@
   }
 }
 .meet div .col-xs-12 .meet__team--background:hover {
-  opacity: 0.8;
+  opacity: 1;
   margin-top: -20px;
   margin-left: -20px;
   margin-bottom: 20px;
@@ -1120,6 +1120,11 @@
   box-sizing: border-box;
   margin-top: 5%;
 }
+@media only screen and (max-width: 500px) {
+  .foot__1 form input[type=text] {
+    width: 40%;
+  }
+}
 .foot__1 form input[type=submit] {
   width: 40%;
   background-color: #95e1d3;
@@ -1131,6 +1136,11 @@
   cursor: pointer;
   margin-top: 5%;
   margin-left: -1.2%;
+}
+@media only screen and (max-width: 500px) {
+  .foot__1 form input[type=submit] {
+    padding-left: 10px;
+  }
 }
 .foot__2--title {
   font-family: 'Montserrat', sans-serif;
