--- a/sass/_meet.scss
+++ b/sass/_meet.scss
@@ -85,7 +85,7 @@
         &--background{
           opacity: 0;
           position: absolute;
-          background: linear-gradient($color-red, $color-yellow);
+          background: linear-gradient($color-red-08, $color-yellow-08);
           width: 360px;
           z-index: 400;
           height: 450px;
@@ -151,7 +151,7 @@
           }
         }
         &--background:hover {
-          opacity: 0.8;
+          opacity: 1;
           margin-top: -20px;
           margin-left: -20px;
           margin-bottom: 20px;
