--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,8 @@
 $color-blue:rgb(149,225,211);
 $color-grey:rgb(248,248,248);
 $color-red: rgb(243,129,129);
+$color-red-08: rgba(243,129,129,0.8);
+$color-yellow-08:rgba(252,227,138,0.8);
 $color-yellow:rgb(252,227,138);
 $color-grey-light:rgb(217,217,217);
 $color-grey-middle:rgb(229,229,229);
