--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -67,8 +67,14 @@
       .slide__text{
         font-size: 15px;
         font-weight: 700;
+        @media(max-width:$xs){
+          font-size: 10px;
+        }
         span{
           font-size: 20px;
+          @media(max-width:$xs){
+            font-size: 15px;
+          }
         }
       }
     }
@@ -109,7 +115,7 @@
     font-size: 20px !important;
   }
   .banner__info--second{
-    font-size: 40px !important;
-    line-height: 30px !important;
+    font-size: 30px !important;
+    line-height: 35px !important;
   }
 }
