--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -1,28 +1,5 @@
 #services{
   margin-bottom: 5%;
-  .services__intro__text{
-    &--first{
-      font-family: 'Kaushan Script', cursive;
-      font-size: 20px;
-      color: black;
-      margin-top: 5%;
-    }
-    &--second{
-      text-transform: uppercase;
-      font-size: 30px;
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 900;
-      margin-top: 0;
-      color: black;
-    }
-  }
-  .services__intro__bar{
-    display:inline-block;
-    border: 2px solid $color-red;
-    width: 50px;
-    margin-top: 1.5%;
-    margin-bottom: 5%;
-  }
   .services__gallery{
     .row{
       &--first{
@@ -47,28 +24,9 @@
       }
       &__pic{
         img{
-          width: 150%;
-          @media(min-width:1500px){
-            width:100%;
-          }
-          @media(max-width:1100px){
-            width: 200%;
-          }
-          @media(max-width:900px){
-            width: 300%;
-          }
-          @media(max-width:850px){
-            width: 400%;
-          }
-          @media(max-width:800px){
-            width: 500%;
-          }
-          @media #{$xs-screen} {
-            width: 100%;
-          }
-          @media(max-width:500px){
-            width: 150%;
-          }
+          width: 32px;
+          height: 31px;
+
         }
       }
       @media #{$xs-screen} {
