--- a/sass/_story-about-us.scss
+++ b/sass/_story-about-us.scss
@@ -1,96 +1,109 @@
 #about {
-  .about__info--first {
-    font-family: 'Kaushan Script', cursive;
-    font-size: 20px;
-    color: black;
-    margin-top: 5%;
-  }
-
-  .about__info--second {
-    text-transform: uppercase;
-    font-size: 30px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    margin-top: 0;
-    color: black;
-  }
-
-  .about__info__bar {
-    display: inline-block;
-    border: 2px solid $color-red;
-    width: 50px;
-    margin-top: 1.5%;
-  }
-
-  .about__info--text {
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-top: 1.5%;
-    width: 60%;
-  }
 
   .about__gallery {
+    width:90%;
+    margin:auto;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    padding-left: 2%;
+    @media(max-width:1250px){
+      padding-left: 1%;
+    }
+    @media(max-width:1170px){
+      padding-left: 0;
+    }
+    @media(max-width:1100px){
+      padding-left: 1%;
+    }
     .wrapper{
+
       @media #{$xs-screen}
       {
         margin-bottom: 4%;
       }
     }
-    margin-top: 5%;
-    margin-bottom: 10%;
     @media #{$xs-screen}
     {
+      padding-left: 25.5%;
+    }
+    @media(max-width:730px){
+      padding-left: 24.5%;
+    }
+    @media(max-width:700px){
       padding-left: 23.5%;
     }
-    @media(max-width:740px){
-      padding-left: 23%;
-    }
-    @media(max-width:715px){
-      padding-left: 22%;
-    }
-    @media(max-width:690px){
-      padding-left: 20%;
-    }
-    @media(max-width:665px){
-      padding-left: 19%;
+    @media(max-width:670px){
+      padding-left: 22.5%;
     }
     @media(max-width:640px){
-      padding-left: 18%;
+      padding-left: 20.5%;
     }
-    @media(max-width:620px){
-      padding-left: 17%;
+    @media(max-width:610px){
+      padding-left: 19.5%;
     }
-    @media(max-width:590px){
-      padding-left: 16%;
-    }
-    @media(max-width:570px){
-      padding-left: 15%;
+    @media(max-width:580px){
+      padding-left: 18.5%;
     }
     @media(max-width:550px){
-      padding-left: 14%;
+      padding-left: 16.5%;
     }
-    @media(max-width:530px){
-      padding-left: 13%;
+    @media(max-width:520px){
+      padding-left: 14.5%;
     }
+    @media(max-width:490px){
+      padding-left: 13.5%;
+    }
+    @media(max-width:460px){
+      padding-left: 10.5%;
+    }
+    @media(max-width:430px){
+      padding-left: 8.5%;
+    }
+    @media(max-width:400px){
+      padding-left: 6.5%;
+    }
+    @media(max-width:370px){
+      padding-left: 2.5%;
+    }
+    @media(max-width:340px){
+      padding-left: 1.5%;
+    }
+    @media(max-width:310px){
+      padding-left: 0;
+    }
+
+
     &__img {
           width: 380px;
           height: 250px;
           opacity: 1;
           z-index: 50;
+          @media(max-width:1340px){
+            width: 320px;
+            height: 210px;
+          }
           @media #{$md-screen}
           {
             width: 310px;
             height: 200px;
+          }
+          @media(max-width:1100px){
+            width: 270px;
+            height: 175px;
           }
           @media #{$sm-screen}
           {
             width: 230px;
             height: 150px;
           }
+          @media(max-width:880px){
+            width: 190px;
+            height: 125px;
+          }
           @media #{$xs-screen}
           {
-            width: 380px;
-            height: 250px;
+            width: 230px;
+            height: 150px;
           }
           &--1 {
             background: url('../img/aboutus_pic1.png');
@@ -112,20 +125,32 @@
           z-index: -100;
           position: absolute;
           background-color: $color-blue;
+          @media(max-width:1340px){
+            width: 320px;
+            height: 210px;
+          }
           @media #{$md-screen}
           {
             width: 310px;
             height: 200px;
+          }
+          @media(max-width:1100px){
+            width: 270px;
+            height: 175px;
           }
           @media #{$sm-screen}
           {
             width: 230px;
             height: 150px;
           }
+          @media(max-width:880px){
+            width: 190px;
+            height: 125px;
+          }
           @media #{$xs-screen}
           {
-            width: 380px;
-            height: 250px;
+            width: 230px;
+            height: 150px;
           }
         }
         &--top {
@@ -134,16 +159,18 @@
           opacity: 0;
           z-index: 90;
           position: absolute;
-          background: linear-gradient($color-red, $color-yellow);
+          background: linear-gradient($color-red-08, $color-yellow-08);
           img{
+
             display: block;
             margin:auto;
-            margin-top: 15%;
+            margin-top: 25%;
             @media #{$xs-screen}
             {
               margin-top: 20%;
             }
           }
+
           span{
             text-transform: uppercase;
             font-weight: bold;
@@ -154,23 +181,35 @@
               margin-top: 5%;
             }
           }
+          @media(max-width:1340px){
+            width: 320px;
+            height: 210px;
+          }
           @media #{$md-screen}
           {
             width: 310px;
             height: 200px;
+          }
+          @media(max-width:1100px){
+            width: 270px;
+            height: 175px;
           }
           @media #{$sm-screen}
           {
             width: 230px;
             height: 150px;
           }
+          @media(max-width:880px){
+            width: 190px;
+            height: 125px;
+          }
           @media #{$xs-screen}
           {
-            width: 380px;
-            height: 250px;
+            width: 230px;
+            height: 150px;
           }
           &:hover {
-            opacity: 0.8;
+            opacity: 1;
             margin-top: -15px;
             margin-left: -15px;
             margin-bottom: 15px;
