--- a/css/style.css
+++ b/css/style.css
@@ -688,13 +688,13 @@
             font-size: 40px; } }
         @media (max-width: 992px) {
           #numbers .row .numbers__div span.numbers__div__count {
-            font-size: 40px; } }
+            font-size: 30px; } }
         @media (max-width: 768px) {
           #numbers .row .numbers__div span.numbers__div__count {
-            font-size: 40px; } }
+            font-size: 25px; } }
         @media (max-width: 500px) {
           #numbers .row .numbers__div span.numbers__div__count {
-            font-size: 30px; } }
+            font-size: 20px; } }
 
 .say {
   position: relative;
@@ -1045,38 +1045,125 @@
 
 #services {
   margin-bottom: 5%; }
-  #services .services__gallery .row--first {
-    margin-bottom: 5%; }
-  #services .services__gallery .row--second {
-    margin-top: 5%;
-    margin-bottom: 5%; }
+  #services .services__gallery .row {
+    margin: auto; }
+    #services .services__gallery .row--first {
+      margin-bottom: 5%; }
+    #services .services__gallery .row--second {
+      margin-bottom: 5%; }
+      @media (min-width: 992px) {
+        #services .services__gallery .row--second {
+          margin-top: 5%; } }
   #services .services__gallery .left {
     margin-left: 5%; }
-  #services .services__gallery__block .title {
-    text-transform: uppercase;
-    font-weight: bold; }
-  @media (min-width: 1500px) {
-    #services .services__gallery__block {
-      width: 30%;
-      margin-left: 1.5%; } }
-  #services .services__gallery__block__pic img {
-    width: 32px;
-    height: 31px; }
-  @media only screen and (max-width: 768px) {
-    #services .services__gallery__block {
-      margin: 5% 0 5% 0 !important; } }
+  #services .services__gallery__block {
+    width: 30%;
+    border-color: #95e1d3;
+    border-radius: 10px;
+    -webkit-transition: all 500ms linear;
+    -moz-transition: all 500ms linear;
+    -o-transition: all 500ms linear;
+    -ms-transition: all 500ms linear;
+    transition: all 500ms linear; }
+    #services .services__gallery__block .title {
+      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: bold;
+      -webkit-transition: all 500ms linear;
+      -moz-transition: all 500ms linear;
+      -o-transition: all 500ms linear;
+      -ms-transition: all 500ms linear;
+      transition: all 500ms linear; }
+    #services .services__gallery__block .description {
+      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 14px;
+      -webkit-transition: all 500ms linear;
+      -moz-transition: all 500ms linear;
+      -o-transition: all 500ms linear;
+      -ms-transition: all 500ms linear;
+      transition: all 500ms linear; }
+    @media (min-width: 1500px) {
+      #services .services__gallery__block {
+        width: 30%;
+        margin-left: 1.5%; } }
+    #services .services__gallery__block__pic img {
+      margin-top: 5px;
+      width: 32px;
+      height: 31px; }
+    @media only screen and (max-width: 768px) {
+      #services .services__gallery__block {
+        margin: 5% 0 5% 0 !important; } }
   #services .services__gallery .middle-bar {
     display: inline-block;
     border: 1px solid #e5e5e5;
     width: 90%;
     margin-left: 5%; }
 
+.services__gallery .services__gallery__block:hover .title {
+  color: #95e1d3;
+  -webkit-animation: moveFromTop 500ms ease-in-out;
+  -moz-animation: moveFromTop 500ms ease-in-out;
+  -ms-animation: moveFromTop 500ms ease-in-out; }
+
+.services__gallery .services__gallery__block:hover .description {
+  -webkit-animation: moveFromBottom 500ms ease-in-out;
+  -moz-animation: moveFromBottom 500ms ease-in-out;
+  -ms-animation: moveFromBottom 500ms ease-in-out; }
+
+.services__gallery .services__gallery__block:hover {
+  border: 2px solid #95e1d3;
+  -webkit-box-shadow: 0px 2px 68px -1px #95e1d3;
+  -moz-box-shadow: 0px 2px 68px -1px #95e1d3;
+  box-shadow: 0px 2px 68px -1px #95e1d3; }
+
+@-webkit-keyframes moveFromBottom {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(200%); }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0%); } }
+@-moz-keyframes moveFromBottom {
+  from {
+    opacity: 0;
+    -moz-transform: translateY(200%); }
+  to {
+    opacity: 1;
+    -moz-transform: translateY(0%); } }
+@-ms-keyframes moveFromBottom {
+  from {
+    opacity: 0;
+    -ms-transform: translateY(200%); }
+  to {
+    opacity: 1;
+    -ms-transform: translateY(0%); } }
+@-webkit-keyframes moveFromTop {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-200%); }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0%); } }
+@-moz-keyframes moveFromTop {
+  from {
+    opacity: 0;
+    -moz-transform: translateY(-200%); }
+  to {
+    opacity: 1;
+    -moz-transform: translateY(0%); } }
+@-ms-keyframes moveFromTop {
+  from {
+    opacity: 0;
+    -ms-transform: translateY(-200%); }
+  to {
+    opacity: 1;
+    -ms-transform: translateY(0%); } }
 #design {
   position: relative;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
-  margin-bottom: 5%; }
+  flex-direction: column; }
   #design img.design__bg {
     content: url("../img/feature_bg.png");
     position: absolute;
@@ -1207,6 +1294,10 @@
       font-weight: bold;
       font-size: 20px;
       line-height: 40px; }
+      @media only screen and (max-width: 768px) {
+        #service .service__details__accordion .panel-title > a {
+          font-size: 15px;
+          line-height: 20px; } }
       #service .service__details__accordion .panel-title > a:focus, #service .service__details__accordion .panel-title > a:hover {
         text-decoration: none;
         outline: none; }
@@ -1218,6 +1309,9 @@
         right: 15px;
         top: 27px;
         font-size: 48px; }
+        @media only screen and (max-width: 768px) {
+          #service .service__details__accordion .panel-title > a:after {
+            font-size: 30px; } }
       #service .service__details__accordion .panel-title > a.collapsed:after {
         content: "\2304";
         font-family: FontAwesome;
@@ -1226,6 +1320,9 @@
         right: 15px;
         top: 5px;
         font-size: 48px; }
+        @media only screen and (max-width: 768px) {
+          #service .service__details__accordion .panel-title > a.collapsed:after {
+            font-size: 30px; } }
       #service .service__details__accordion .panel-title > a img {
         margin-right: 3%; }
     #service .service__details__accordion .panel-body {
@@ -1241,54 +1338,65 @@
     #service .service__details__accordion .panel-default > .panel-heading + .panel-collapse > .panel-body {
       border-top: 0 none; }
 
-#carousel1 {
+.testimontial0 {
   background-color: #e5e5e5;
-  margin-bottom: 5%; }
-  #carousel1 .carousel-inner .item .carousel__slide {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-bottom: 5%; }
-    #carousel1 .carousel-inner .item .carousel__slide--img {
-      padding-right: 10%; }
-      #carousel1 .carousel-inner .item .carousel__slide--img img {
-        display: block;
-        padding: 15px;
-        border: 3px solid #95e1d3;
-        margin-right: 5%; }
-    #carousel1 .carousel-inner .item .carousel__slide div .carousel__slide {
-      padding-left: 15%; }
-      #carousel1 .carousel-inner .item .carousel__slide div .carousel__slide--text {
-        color: #999999;
-        font-size: 16px; }
-      #carousel1 .carousel-inner .item .carousel__slide div .carousel__slide--name span {
-        font-size: 16px;
+  padding-top: 1%;
+  padding-bottom: 1%; }
+  .testimontial0__slider--left {
+    text-align: center;
+    margin-top: 5%; }
+    @media only screen and (max-width: 768px) {
+      .testimontial0__slider--left {
+        margin-top: 25%; } }
+  .testimontial0__slider--right {
+    text-align: center;
+    margin-top: 3%; }
+    @media only screen and (max-width: 768px) {
+      .testimontial0__slider--right {
+        margin-top: 0%; } }
+  .testimontial0__slider--page {
+    padding-top: 1%; }
+    @media only screen and (max-width: 768px) {
+      .testimontial0__slider--page {
+        padding-left: 35%; } }
+    .testimontial0__slider--page--img {
+      margin-left: 15%;
+      margin-right: 5%;
+      width: 100px !important;
+      height: 100px !important;
+      border: 2px solid #95e1d3;
+      padding: 18px; }
+      .testimontial0__slider--page--img img {
+        width: 63px !important;
+        height: 61px !important; }
+    .testimontial0__slider--page--text {
+      color: #999999;
+      font-family: 'Roboto', sans-serif;
+      font-style: italic;
+      width: 70%; }
+      @media only screen and (max-width: 768px) {
+        .testimontial0__slider--page--text {
+          width: 90%;
+          margin-top: 50px;
+          padding-left: -30%;
+          margin-left: -20%; } }
+    .testimontial0__slider--page--name {
+      padding-top: 3%; }
+      @media only screen and (max-width: 768px) {
+        .testimontial0__slider--page--name {
+          margin-left: -20%; } }
+      .testimontial0__slider--page--name--name {
         font-family: 'Kaushan Script', cursive; }
 
-.carousel-control.left {
-  background-image: none; }
-  .carousel-control.left img {
-    display: block;
-    margin-top: 50%;
-    margin-left: 80%; }
-    @media only screen and (max-width: 768px) {
-      .carousel-control.left img {
-        margin-top: 100%; } }
-
+.carousel-control.left,
 .carousel-control.right {
-  background-image: none; }
-  .carousel-control.right img {
-    display: block;
-    margin-top: 50%; }
-    @media only screen and (max-width: 768px) {
-      .carousel-control.right img {
-        margin-top: 100%; } }
-
-@media (max-width: 1200px) {
-  .carousel-control {
-    margin-top: 40%; } }
-@media (max-width: 1300px) {
-  .carousel-control {
-    margin-top: 30%; } }
+  background-image: none;
+  height: 50px;
+  margin-top: 3%; }
+  @media only screen and (max-width: 768px) {
+    .carousel-control.left img,
+    .carousel-control.right img {
+      margin-top: 100%; } }
 
 .page-title__main {
   font-family: Kaushan Script;
