--- a/sass/_service.scss
+++ b/sass/_service.scss
@@ -77,6 +77,10 @@
         font-weight: bold;
         font-size: 20px;
         line-height: 40px;
+        @media #{$xs-screen} {
+          font-size: 15px;
+          line-height: 20px;
+        }
 
         &:focus,
         &:hover {
@@ -92,6 +96,9 @@
           right: 15px;
           top: 27px;
           font-size: 48px;
+          @media #{$xs-screen} {
+            font-size: 30px;
+          }
         }
 
         &.collapsed {
@@ -103,6 +110,9 @@
             right: 15px;
             top: 5px;
             font-size: 48px;
+            @media #{$xs-screen} {
+              font-size: 30px;
+            }
           }
           &:hover {
           }
