--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -2,11 +2,14 @@
   margin-bottom: 5%;
   .services__gallery{
     .row{
+      margin:auto;
       &--first{
         margin-bottom: 5%;
       }
       &--second{
-        margin-top: 5%;
+        @media(min-width:992px){
+          margin-top: 5%;
+        }
         margin-bottom: 5%;
       }
     }
@@ -14,9 +17,33 @@
       margin-left: 5%;
     }
     &__block{
+      width:30%;
+      border-color: $color-blue;
+      border-radius:10px;
+      -webkit-transition: all 500ms linear;
+      -moz-transition: all 500ms linear;
+      -o-transition: all 500ms linear;
+      -ms-transition: all 500ms linear;
+      transition: all 500ms linear;
       .title{
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 14px;
         text-transform: uppercase;
         font-weight: bold;
+        -webkit-transition: all 500ms linear;
+        -moz-transition: all 500ms linear;
+        -o-transition: all 500ms linear;
+        -ms-transition: all 500ms linear;
+        transition: all 500ms linear;
+      }
+      .description{
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 14px;
+        -webkit-transition: all 500ms linear;
+        -moz-transition: all 500ms linear;
+        -o-transition: all 500ms linear;
+        -ms-transition: all 500ms linear;
+        transition: all 500ms linear;
       }
       @media(min-width:1500px){
         width: 30%;
@@ -24,6 +51,7 @@
       }
       &__pic{
         img{
+          margin-top: 5px;
           width: 32px;
           height: 31px;
 
@@ -40,4 +68,86 @@
       margin-left: 5%;
     }
   }
+}
+
+
+.services__gallery .services__gallery__block:hover .title{
+    color: $color-blue;
+    -webkit-animation: moveFromTop 500ms ease-in-out;
+    -moz-animation: moveFromTop 500ms ease-in-out;
+    -ms-animation: moveFromTop 500ms ease-in-out;
+}
+
+.services__gallery .services__gallery__block:hover .description{
+  -webkit-animation: moveFromBottom 500ms ease-in-out;
+  -moz-animation: moveFromBottom 500ms ease-in-out;
+  -ms-animation: moveFromBottom 500ms ease-in-out;
+}
+.services__gallery .services__gallery__block:hover{
+  border: 2px solid $color-blue;
+  -webkit-box-shadow: 0px 2px 68px -1px $color-blue;
+  -moz-box-shadow: 0px 2px 68px -1px $color-blue;
+  box-shadow: 0px 2px 68px -1px $color-blue;
+}
+
+@-webkit-keyframes moveFromBottom {
+    from {
+        opacity: 0;
+        -webkit-transform: translateY(200%);
+    }
+    to {
+        opacity: 1;
+        -webkit-transform: translateY(0%);
+    }
+}
+@-moz-keyframes moveFromBottom {
+    from {
+        opacity: 0;
+        -moz-transform: translateY(200%);
+    }
+    to {
+        opacity: 1;
+        -moz-transform: translateY(0%);
+    }
+}
+@-ms-keyframes moveFromBottom {
+    from {
+        opacity: 0;
+        -ms-transform: translateY(200%);
+    }
+    to {
+        opacity: 1;
+        -ms-transform: translateY(0%);
+    }
+}
+
+@-webkit-keyframes moveFromTop {
+    from {
+        opacity: 0;
+        -webkit-transform: translateY(-200%);
+    }
+    to {
+        opacity: 1;
+        -webkit-transform: translateY(0%);
+    }
+}
+@-moz-keyframes moveFromTop {
+    from {
+        opacity: 0;
+        -moz-transform: translateY(-200%);
+    }
+    to {
+        opacity: 1;
+        -moz-transform: translateY(0%);
+    }
+}
+@-ms-keyframes moveFromTop {
+    from {
+        opacity: 0;
+        -ms-transform: translateY(-200%);
+    }
+    to {
+        opacity: 1;
+        -ms-transform: translateY(0%);
+    }
 }
