Overlay ready in WORK

--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,9 @@
 .work__picture .work__picture--overlay {
   position: absolute;
   z-index: 50;
-  margin-top: -50%;
+  height: 100%;
+  margin-top: -80%;
+  padding-top: 25%;
   text-align: center;
   width: 100%;
   color: white;
@@ -324,7 +326,9 @@
   margin-top: -3%;
 }
 .work__picture .work__picture--overlay--three {
-  margin-top: -85%;
+  margin-top: -160%;
+  height: 100%;
+  padding-top: 65%;
 }
 .work__picture .work__picture--overlay:hover {
   opacity: 1;
