--- a/sass/_meet.scss
+++ b/sass/_meet.scss
@@ -114,7 +114,7 @@
           position: absolute;
           margin-left: 20%;
           z-index: 300;
-          margin-top: 50%;
+          margin-top: 20%;
           .meet__team--img {
             margin-top: 50%;
             position: relative;
@@ -123,13 +123,35 @@
             background-color: $color-yellow;
           }
           .meet__team--img:first-child {
-            background-color: $color-red;
             margin-top: 50%;
+            content:url(../img/pictograms/meet_facebook.png);
+          }
+          .meet__team--img:nth-child(2) {
+            content:url(../img/pictograms/meet_twitter.png);
+            padding-top: 19px;
+          }
+          .meet__team--img:nth-child(2):hover{
+            content:url(../img/pictograms/meet_twitter_white.png);
+          }
+          .meet__team--img:nth-child(3) {
+            content:url(../img/pictograms/meet_pinterest.png);
+          }
+          .meet__team--img:nth-child(3):hover{
+            content:url(../img/pictograms/meet_pinterest_white.png);
+          }
+          .meet__team--img:nth-child(4) {
+            content:url(../img/pictograms/meet_instagram.png);
+          }
+          .meet__team--img:nth-child(4):hover{
+            content:url(../img/pictograms/meet_instagram_white.png);
           }
           .meet__team--img:last-child {
             img {
               margin-right: 10px;
             }
+          }
+          .meet__team--img:hover{
+            background-color: $color-red;
           }
           @media #{$sm-screen} {
             margin-left: 10%;
