--- a/css/style.css
+++ b/css/style.css
@@ -1287,10 +1287,10 @@
 }
 @media only screen and (max-width: 768px) {
   .testimontial__slider--page--text {
-    width: 90%;
+    width: 140%;
     margin-top: 50px;
-    padding-left: -30%;
-    margin-left: -20%;
+    margin-left: -40%;
+    margin-right: 10%;
   }
 }
 .testimontial__slider--page--name {
